--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "author": "Hector Leon Zarco Garcia <hezarco@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "react-gh-corner": "^1.0.1",
+    "react-gh-corner": "^1.1.2",
+    "styled-components": "^3.4.10",
     "ts-react-toolbox": "^0.1.22"
   },
   "dependencies": {},
@@ -27,7 +28,8 @@
     "node": ">=8.5.0"
   },
   "peerDependencies": {
-    "react": "^16.3.0"
+    "react": "^16.3.0",
+    "styled-components": "^3.4.10"
   },
   "types": "dist/es5/index.d.ts",
   "files": [
